src/components/title-bar/styles/title-bar.module.css
.titleBar {
    display: flex;
    flex-grow: 1;
    justify-content: flex-start;
    /* Same amount of whitespace as the expanded canvas button */
    padding-inline-end: 28px;
}

.titleBar > .buttonContainer {
    display: flex;
    flex-grow: 0;
    padding: 0 4px;
}

.titleBar > .titleContainer {
    display: flex;
    flex-grow: 1;
}

.cell {
    display: flex;
    align-items: center;
    background-color: var(--colors-white);
    padding: 6px;
    border-radius: 5px;
    margin: 4px;
}

.title {
    font-size: 13px;
    font-weight: 500;
    color: var(--colors-grey800);
}

.suffix {
    margin-inline-start: 4px;
}

.titleUnsaved {
    color: var(--colors-grey500);
    font-style: italic;
}

.titleDirty {
    color: var(--colors-grey800);
    padding: 2px 4px;
    border-radius: 3px;
    background-color: var(--colors-grey200);
    margin-block-start: -1px;
    font-size: 11px;
    letter-spacing: -0.2px;
    font-family: monospace;
    line-height: normal;
}

